<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/display_result"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:hint="@string/number_1"
        android:inputType=""
        android:textSize="16sp"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/number_2"
        android:autofillHints=""
        android:inputType=""
        android:minHeight="48dp"
        android:textSize="16sp"
        android:textColorHint="@color/hint_color"  />


        <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
            android:text="@string/plus_symbol"
        android:textSize="25sp"/>

        <Button
        android:id="@+id/btn_sub"
        android:layout_width="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/sub_symbol"
        android:textSize="25sp"/>
        <Button
        android:id="@+id/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/multiply_symbol"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:text="@string/div_symbol"
        android:textSize="25sp"/>

</LinearLayout>



